/*
 * $Id: ChangeLog,v 1.510 2002/12/04 06:24:03 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2002-12-05 01:23 UTC+0300 Phil Krylov <phil@mail.ru>
  + make_drw.sh
     + Added a GNU-make starter for Darwin
  + config/darwin/dir.cf
  + config/darwin/gcc.cf
  + config/darwin/global.cf
  + config/darwin/install.cf
    + New GNU Make System modules for Darwin
  * doc/gmake.txt
    + Added documentation for darwin/gcc
  * source/compiler/harbour.c
  * source/compiler/harbour.sly
  * source/vm/fm.c
  * source/vm/hvm.c
  * utils/hbpp/hbpp.c
    + #include <stdlib.h> instead of <malloc.h> on Darwin
  * source/rtl/idle.c
    + Added 'usleep(1);' to hb_releaseCPU() for Darwin
    + Added '#include <unistd.h>' on Darwin

2002-12-03 22:22 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbcomp.h
  * include/hbmacro.h
  * source/compiler/harbour.c
  * source/vm/macro.c
    + Added void hb_compGenPushMemVarRef( char * szVarName );

  * include/hbexpra.c
  * include/hbexprb.c
  * include/hbexprop.h
  * source/common/expropt1.c
    + Added support for new HB_ET_MEMVARREF.

  * source/compiler/harbour.sly
    + Added support for @M|MEMV[AR]->SomeVar as function argument.

2002-12-01 0:55 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * source/debug/dbgtarr.prg
  * source/debug/dbgtmenu.prg
  * source/debug/dbgtobj.prg
  * source/debug/dbgwa.prg
  * source/debug/debugger.prg
  * source/debug/tbrwtext.prg
    ! Several optimizations. Adel, Ains, FOR EACH, or/and IN.

2002-11-29 17:00 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * source/rtl/achoice.prg
  * source/rtl/alert.prg
  * source/rtl/cstr.prg
  * source/rtl/devoutp.prg
  * source/rtl/errorsys.prg
  * source/rtl/listbox.prg
  * source/rtl/memoedit.prg
  * source/rtl/objfunc.prg
  * source/rtl/persist.prg
  * source/rtl/pushbtn.prg
  * source/rtl/tclass.prg