@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.510 2002/12/04 06:24:03 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.511 2002/12/04 23:06:14 likewolf Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2002-12-04 17:17 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * source/rtl/binnum.c
+    * Corrected recent optimization of Bin2L() to support strings shorter than 4 bytes long.
 
 2002-12-05 01:23 UTC+0300 Phil Krylov <phil@mail.ru>
   + make_drw.sh
